fix for lines z-index

--- a/modules/cash/public/stylesheets/style.css
+++ b/modules/cash/public/stylesheets/style.css
@@ -184,7 +184,7 @@ td {
 	width:1px;
 	height:1px;
 	background-color:#333;
-	z-index:2;
+	z-index:1;
 }
 
 .invisible{
